<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QWUI_Android</string>
    <string name="no_list_data">No data</string>
    <string name="str_network_not_capable">Poor network</string>
    <string name="network_error_reload">The network is abnormal, please check the network and click refresh</string>
    <string name="click_screen_reload">Refresh</string>
    <string name="loading">Loading&#8230;</string>
    <string name="click_or_pull_refresh">Refresh</string>
    <string name="sure">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_cp_title">Remove CP</string>
    <string name="remove_cp_content">Are you sure to release bind from %s?</string>
    <string name="input_panel_wzq">五子棋</string>
    <string name="input_panel_llk">连连看</string>
    <string name="input_panel_tyt">跳一跳</string>
    <string name="gift_action">Gift</string>
    <string name="nav_square">World</string>
    <string name="nav_msg">Message</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="setting">Setting</string>
    <string name="perm_tip">The current application lacks the necessary permissions. \nPlease click "Settings" - "Permissions" - open the required permissions. \nClick the back button twice to return.</string>
    <string name="ask_again">Please give the necessary permissions to make the program work.</string>
    <string name="ask_again_new">Please give the necessary permissions to make the program work.</string>
    <string name="ask_camera">Please give the app album permission so that it can be used normally.</string>
    <string name="ask_storage">Do not use the SD card permissions, please open in the rights management</string>
    <string name="room_egg_gift_tip">Received gifts</string>
    <string name="room_egg_car_tip">Received an exclusive VIP ride </string>
    <string name="room_egg_header_tip">Received an exclusive mic frame</string>
    <string name="room_egg_lotter">Congratulations</string>
    <string name="room_egg_lotter_l">High Gift Lucky Star</string>
    <string name="room_egg_lotter_no_data">Too slow</string>
    <string name="room_egg_lotter_no_data_l">Oops, you got nothing, better luck next time</string>
    <string name="room_egg_lotter_e">Already received</string>
    <string name="egg_gold_gift">%s gold coins</string>
    <string name="egg_gift">%1s%2s</string>
    <string name="egg_gift_car">%1s * %2s days</string>
    <string name="tip_type_not_image">Not the picture selected</string>
    <string name="tip_no_camera">No camera</string>
    <string name="tip_compress">Compressing photos…</string>
    <string name="tip_compress_failed"><![CDATA[<font>%1$s Image compression failed: %2$s picturePath:%3$s</font>]]></string>
    <string name="msg_crop_failed">"There is a picture with a crop failure"</string>
    <string name="msg_compress_failed">"There is a picture with compression failure"</string>
    <string name="msg_crop_canceled">" Cancel crop"</string>
    <string name="msg_operation_canceled">"Operation cancelled"</string>
    <string name="tip_permission_camera">No permission to use the camera, please open in rights management</string>
    <string name="tip_permission_storage">Do not use the SD card permissions, please open in the rights management</string>
    <string name="tip_permission_camera_storage">Do not use the camera and SD card permissions, please open in the rights management</string>
    <string name="album_view">Select image</string>
    <string name="image_view">Select</string>
    <string name="add">Add</string>
    <string name="selected">Selected</string>
    <string name="bill_gift_income">Gift received record</string>
    <string name="bill_gift_expend">Gift send record</string>
    <string name="bill_charge">Recharge record</string>
    <string name="bill_withdraw">Withdraw record</string>
    <string name="bill_red">Invite record</string>
    <string name="gift_income_gold">Diamond</string>
    <string name="gift_expend_gold">Coins</string>
    <string name="bill_title">Bill Record</string>
    <string name="bill_gift_gold_num"><![CDATA[<font >Balance: %1$s coins</font>]]></string>
    <string name="menu_my_wallet">My wallet</string>
    <string name="menu_my_auction">Bid record</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_help">Help</string>
    <string name="menu_level">My level</string>
    <string name="menu_medal">My badge</string>
    <string name="menu_noble">My aristocracy</string>
    <string name="menu_create_my_room">My room</string>
    <string name="menu_car">Mall</string>
    <string name="menu_realAuth">Real-name authentication</string>
    <string name="room_offline">The owner has gone offline</string>
    <string name="fan">Fans</string>
    <string name="star_list_title">Charm Honor Rank</string>
    <string name="noble_list_title">Wealth honor Rank</string>
    <string name="message">Message </string>
    <string name="friend">Friends</string>
    <string name="no_frenids_text">You have no friends yet! Follow each other to become friends</string>
    <string name="no_new_user_list_text">Temporarily unable to load the rookie list, please try again later</string>
    <string name="no_fan_text">You have no fans yet</string>
    <string name="no_black_text">There is no data in the blacklist list </string>
    <string name="no_like_text">You have not liked the record </string>
    <string name="main_home">Home</string>
    <string name="main_attention">Related</string>
    <string name="main_msg">Message</string>
    <string name="main_me">ME</string>
    <string name="main_find">Discover</string>
    <string name="main_room">Room</string>
    <string name="online_number">%d </string>
    <string name="online_number_text">Online:%s</string>
    <string name="me_user_id"><![CDATA[<font>ID:%1$s</font>]]></string>
    <string name="me_user_id_null">ID:</string>
    <string name="my_attention">Follow</string>
    <string name="my_fan">Fan</string>
    <string name="my_like">Like</string>
    <string name="no_attention_text">No Friends</string>
    <string name="search_hint">Search Nick/ID/Room title</string>
    <string name="online">Online</string>
    <string name="my_wallet">My wallet</string>
    <string name="my_wallet_balance">Balance</string>
    <string name="hotScore">Popular</string>
    <string name="dearch_no_data">No search results are available</string>
    <string name="room_setting">Room settings</string>
    <string name="input_pwd">Input password</string>
    <string name="online_user_text">Online users</string>
    <string name="mic_user_list_text">Select personnel</string>
    <string name="contribution_value"><![CDATA[<font >%1$s Contribution</font>]]></string>
    <string name="fan_success">Following success</string>
    <string name="fan_cancel_success">Unfollow</string>
    <string name="fan_friend_cancel_tips">Do you unfollow?</string>
    <string name="fan_cancel_tips">Unfollowing will no longer be a friend relationship，Confirm to unfollow？</string>
    <string name="set_room_manager">You have been set as the administrator by the owner</string>
    <string name="remove_room_manager">You have been removed from the administrator by the owner</string>
    <string name="kick_mic">You were removed from mic by owner or administrator</string>
    <string name="embrace_on_mic">You have been picked up by the owner or administrator, but the microphone is not turned on. If you need to talk, please turn on the microphone.</string>
    <string name="online_text">Online</string>
    <string name="title_online">Online</string>
    <string name="forbid_mic">Mute Mic</string>
    <string name="no_forbid_mic">Unmute Mic</string>
    <string name="embrace_up_mic">Take the mic</string>
    <string name="unlock_mic">Unblock the seat</string>
    <string name="lock_mic">Block the seat</string>
    <string name="message_view_bottom_tip">New message</string>
    <string name="data_error">Downloading error, try again</string>
    <string name="room_no_desc">No description</string>
    <string name="no_empty_mic">No empty mic</string>
    <string name="crowded_down">Crowed down</string>
    <string name="down_mic_text">Down mic</string>
    <string name="add_black_list">You have been blacklisted by the administrator</string>
    <string name="kick_member_by_manager">You have been kicked out of the room by the administrator</string>
    <string name="set_manager">Set manager</string>
    <string name="remove_manager">Remove manager</string>
    <string name="onlineNum">online</string>
    <string name="dialog_user_info_report_text">Report</string>
    <string name="dialog_user_info_fans_number_text"><![CDATA[<font >Fans：%1$s</font>]]></string>
    <string name="dialog_user_info_attention_btn_text">Follow</string>
    <string name="dialog_gift_avatar_list_default_value">All mic</string>
    <string name="gift_recharge_text"><![CDATA[Recharge>]]></string>
    <string name="gift_send_text">Send to</string>
    <string name="gift_number_1">1</string>
    <string name="gift_number_10">10</string>
    <string name="gift_number_38">38</string>
    <string name="gift_number_66">66</string>
    <string name="gift_number_188">188</string>
    <string name="gift_number_520">520</string>
    <string name="gift_number_1314">1314</string>
    <string name="gift_number_text_1">1</string>
    <string name="gift_number_text_10">10</string>
    <string name="gift_nubmer_text_38">38</string>
    <string name="gift_number_text_66">66</string>
    <string name="gift_number_text_188">188</string>
    <string name="gift_number_text_520">520</string>
    <string name="gift_number_text_1314">1314</string>
    <string name="gift_gold_init">0 coins</string>
    <string name="title_about_text">About us</string>
    <string name="about_version_name">V%s</string>
    <string name="about_slogan">Make friends with people all over the world</string>
    <string name="about_company_name">Duo Qu</string>
    <string name="setting_platform_binding">Account binding</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_network">Network test</string>
    <string name="network_analysising">Diagnosing...%s</string>
    <string name="network_analysi_copy_report">Copy diagnostic report</string>
    <string name="setting_qrcode_scaner">Scanner</string>
    <string name="qrcode_scaner_tips">Put the QR code in the box and it will scan automatically</string>
    <string name="qrcode_scan_result_tips">Login Confirm</string>
    <string name="qrcode_scan_result_login">Login in </string>
    <string name="qrcode_scan_result_login_title">Scanner Login</string>
    <string name="setting_contact_us">Contact us</string>
    <string name="setting_help">Help</string>
    <string name="setting_about_us">About us</string>
    <string name="setting_user_agreement">Agreement</string>
    <string name="setting_black_list">Blacklist</string>
    <string name="setting_version_checking">Version</string>
    <string name="setting_lab">实验室</string>
    <string name="setting_logout">Sign out</string>
    <string name="public_chat_room">World</string>
    <string name="sensitive_word_data">Please do not send words that contain sex, politics, discrimination, insults, etc.</string>
    <string name="send">Send</string>
    <string name="tv_send_redpackage_handing_fee_tips">*This amount includes handling fees, and the actual amount issued is %d coins</string>
    <string name="luck_bag_coins">Anyone who opens the luck bag may get coins</string>
    <string name="room_lucky_bags">Room Lucky Bags</string>
    <string name="world_lucky_bags">World Lucky Bags</string>
</resources>